test/should-fail/vsgc2416bad.f3
/**
 * should-fail test VSGC-2416 : Parser and tree generation: mixin keyword for classes
 *
 * @test/compile-error
 */

mixin class Sized {
  var width : Number;
  var height : Number;
  public function area() : Number { width * height }
}

var szd = Sized{}

mixin var x = 9;
mixin function foo() { "lop" }

